--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
     justify-content: start;
     width: 700px;
     min-height: 600px;
-    background-color: rgba(127, 127, 214, 0.6);
+    /* background-color: rgba(127, 127, 214, 0.6); */
     text-align: center;
     margin: 128px auto;
     border-radius: 10px;
